--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,19 +1,53 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
+
     <head>
+
+        <meta name="author" content="Willy TALOM">
+        <meta name="keywords" content="Ventes de vetements Hommes Femmes Enfants">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-        {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
+        <meta name="description" content="{% block description %}{% endblock %}">
+
+        <title>{% block title %}{% endblock %}</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+        <link rel="stylesheet" href="{{ asset('css/base.css') }}">
+        
+
         {% block stylesheets %}
-            {{ encore_entry_link_tags('app') }}
+    
         {% endblock %}
 
-        {% block javascripts %}
-            {{ encore_entry_script_tags('app') }}
-        {% endblock %}
+   
     </head>
+
     <body>
-        {% block body %}{% endblock %}
+
+        <header>
+
+            {% include "__partials/header.html.twig" %}
+
+        </header>
+
+        <main>
+
+          {% block body %}{% endblock %}  
+
+        </main>
+
+        <footer>
+
+            {% include "__partials/footer.html.twig"%}
+
+        </footer>
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+
+        <script src="{{ asset('js/base.js') }}"></script>
+
+        {% block javascripts %}{% endblock %}
+        
     </body>
+
 </html>
