--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -32,7 +32,8 @@
 
         <main>
 
-          {% block body %}{% endblock %}  
+          {% block body %}
+          {% endblock %}  
 
         </main>
 
