creatiion ficher footer.css et header.css,modification templates(__partials et home)

--- a/templates/__partials/header.html.twig
+++ b/templates/__partials/header.html.twig
@@ -1,3 +1,6 @@
+{% block stylesheets %} <link rel="stylesheet" href="{{ asset('css/header.css')}}"> {% endblock %}
+
+
 <header
       id="header1" class="container-fluid d-flex flex-row justify-content-between bg-secondary "
     >
@@ -26,7 +29,7 @@
       <a id = "icon2" href="./blog.html" class="nav-link text-white">HOMME</a>
       <a id = "icon2" href="./blog.html" class="nav-link text-white">ENFANT</a>
       <a id = "icon2" href="#" class="nav-link text-white">CONTACT</a>
-      <a id = "icon2" href="#" class="nav-link text-white">FAQ</a>
+      <a id = "icon2" href="#" class="nav-link text-white">CONNEXION</a>
     </nav>
 
   </header>
