--- a/templates/__partials/footer.html.twig
+++ b/templates/__partials/footer.html.twig
@@ -1,4 +1,6 @@
-<div class="container-fluid bg-dark text-light">
+{% block stylesheets %} <link rel="stylesheet" href="{{ asset('css/footer.css')}}"> {% endblock %}
+
+<div class="container-fluid text-dark">
     <div class="row text-center p-5">
         <div class="col-3">
             <h5>QUELQUES LIENS</h5>
@@ -13,11 +15,9 @@
             </ul> 
            
         </div>
-    
-        
         <div class="col-3">
             <h5>COORDONNES</h5>
-            <hr class="m-3">
+            <hr class="m-3 ">
             <p>{{contact_company}}</p> 
             <p>{{contact_address}}</p>
             <p>{{contact_zip ~' '~ contact_city}}</p>
@@ -26,25 +26,37 @@
         </div>
 
         <div class="col-3">
+
             <h5>RESEAUX SOCIAUX</h5>
             <hr class="m-3">
-            <div class="dropdown bg-dark m-3"></div>
-            <span class='bi bi-facebook' style='color: blue'></span>
-            </div>
+            <ul>
+                <li><span><i class="bi bi-facebook"></i></span></li>
+                <li><span><i class="bi bi-instagram"></i></span></li>
+                <li><span><i class="bi bi-snapchat"></i></span></li>
+                <li><span><i class="bi bi-tiktok"></i></span></li>
+        
         </div>
 
         <div class="col-3">
             <h5>ASSISTANCE</h5>
             <hr class="m-3">
+            <ul>
+                <li><a href="">Politique de Confidentialité</a></li>
+                <li><a href="">Termes et Conditions </a></li>
+                <li></li>
+                <li></li>
+            </ul>
            
         </div>
 
-        <div class="col-12">
-            <p>Copyright &copy; {{ "now"|date("Y") }} - Willy TALOM | Articles extraits du site <a href="https://www.videdressing.com/" target="_blank">videdressing.com</a></p>
-            
-        </div>
+
 
     </div>
 
+    <p>Copyright &copy; {{ "now"|date("Y") }} - Willy TALOM | Articles extraits du site <a href="https://www.videdressing.com/" target="_blank">videdressing.com</a></p>
+    
 
 </div>
+
+
+
