création categoryContoller,product templates(homme,femme,enfant)

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -37,7 +37,7 @@
             <h6 id="text-des">{{ product.description|u.truncate(70,'...', false) }}</h6>
             <h5 class="card-price small ">
               <i class="text-danger">
-                <s class="text-secondary">{{product.price}} €</s> {{product.price}} €</i>
+                <s class="text-secondary">{{product.price}} €</s> {{product.reduction}} €</i>
             </h5>
           </div>
         </div>
