creation des pages

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -16,6 +16,8 @@
         
 
         {% block stylesheets %}
+
+        
     
         {% endblock %}
 
@@ -31,6 +33,13 @@
         </header>
 
         <main>
+
+                        
+                        <h1>{% block h1 %}{% endblock %}</h1>
+        
+                
+
+
 
           {% block body %}
           {% endblock %}  
