--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -28,7 +28,7 @@
     <div class="col-3">
         <div class="card">
           <div class="card-img-top">
-            <img src="https://via.placeholder.com/360x360.jpg/CCCCC" class="img-fluid mx-auto d-block" alt="Card image cap">
+            <img src="https://res.cloudinary.com/videdressing/image/upload/t_p_237/v1633010561/products/12738554-6.jpg" class="img-fluid mx-auto d-block" alt="Card image cap">
           </div>
           <div class="card-body text-center">
             <h4 class="card-title">
@@ -39,6 +39,9 @@
               <i class="text-danger">
                 <s class="text-secondary">{{product.price}} €</s> {{product.reduction}} €</i>
             </h5>
+            <div>
+              <a href="{{ path('femme_show', {'slug': product.slug}) }}" class="card-link"><i class="btn btn-success">Détails</i></a>
+          </div>
           </div>
         </div>
     </div>
