création entité category,brand et sexe.

--- a/templates/__partials/header.html.twig
+++ b/templates/__partials/header.html.twig
@@ -24,10 +24,10 @@
     <div></div>
 
     <nav class="nav">
-      <a id = "icon2" href="{{path('home')}}" class="nav-link text-white">ACCUEIL</a>
-      <a id = "icon2" href="{{path('femme')}}" class="nav-link text-white">FEMME</a>
-      <a id = "icon2" href="{{path('homme')}}" class="nav-link text-white">HOMME</a>
-      <a id = "icon2" href="{{path('enfant')}}" class="nav-link text-white">ENFANT</a>
+      <a id = "icon2" href="#" class="nav-link text-white">ACCUEIL</a>
+      <a id = "icon2" href="#" class="nav-link text-white">FEMME</a>
+      <a id = "icon2" href="#" class="nav-link text-white">HOMME</a>
+      <a id = "icon2" href="#" class="nav-link text-white">ENFANT</a>
       <a id = "icon2" href="#" class="nav-link text-white">CONTACT</a>
       <a id = "icon2" href="#" class="nav-link text-white">CONNEXION</a>
     </nav>
