creation section admin et la liste de produits avec de fausses données

--- a/templates/__partials/header.html.twig
+++ b/templates/__partials/header.html.twig
@@ -25,7 +25,7 @@
 
     <nav class="nav">
       <a id = "icon2" href="#" class="nav-link text-white">ACCUEIL</a>
-      <a id = "icon2" href="#" class="nav-link text-white">FEMME</a>
+      <a id = "icon2" href="{{path('category')}}" class="nav-link text-white">FEMME</a>
       <a id = "icon2" href="#" class="nav-link text-white">HOMME</a>
       <a id = "icon2" href="#" class="nav-link text-white">ENFANT</a>
       <a id = "icon2" href="#" class="nav-link text-white">CONTACT</a>
