--- a/templates/baseAdmin.html.twig
+++ b/templates/baseAdmin.html.twig
@@ -37,11 +37,12 @@
                
                     <a class="py-2"><a href="" class="text-light" title="accueil administrateur"><i class="bi bi-house fs-4"></i></a></a>
                     <a class="py-2"><a href="{{path('admin_products')}}" class="text-light" title="produits"><i class="bi bi-dice-5 fs-4"></i></a></a>
-                    <a class="py-2"><a href="" class="text-light" title="catégories"><i class="bi bi-tags fs-4"></i></a></a>
+                    <a class="py-2"><a href="{{path('admin_category')}}" class="text-light" title="catégories"><i class="bi bi-tags fs-4"></i></a></a>
                     <a class="py-2"><a href="#" class="text-light" title="marques"><i class="bi bi-microsoft fs-4"></i></a></a>
+                    <a class="py-2"><a href="#" class="text-light" title="commandes"><i class="bi bi-list-ol fs-4"></i></a></a>
                     <a class="py-2"><a href="#" class="text-light" title="utilisateurs"><i class="bi bi-people fs-4"></i></a></a>
-                    <a class="py-2"><a href="" class="text-light" title="accueil site"><i class="bi bi-house fs-4"></i></a></a>
-                    <a class="py-2"><a href="#" class="text-light" title="déconnexion"><i class="bi bi-door-open fs-4"></i></a></a>
+                    <a class="py-2"><a href="{{path('home')}}" class="text-light" title="accueil site"><i class="bi bi-house fs-4"></i></a></a>
+                    <a class="py-2"><a href="" class="text-light" title="déconnexion"><i class="bi bi-door-open fs-4"></i></a></a>
           
 
           </nav>
