--- a/templates/product/adminList.html.twig
+++ b/templates/product/adminList.html.twig
@@ -16,7 +16,7 @@
                 <th>Prix Soldé</th>
                 <th>Catégorie</th>
                 <th>Marques</th>
-                <th>Sexe</th>
+                {#<th>Sexe</th>#}
                 <th>Actions</th>
             </tr>
         </thead>
@@ -30,10 +30,11 @@
                     <td>{{ product.priceSolde }}</td>
                     <td>{{ product.category.name }}</td>
                     <td>{{ product.brand.name }}</td>
-                    <td>{{ product.sexe.name }}</td>
+                    {#<td>{{ product.sexe.name }}</td>
+                    <td>#}
                     <td>
-                        <a href="{#{{ path('product_update', {'id': product.id}) }}#}"><i class="bi bi-pencil-square text-primary"></i></a>
-                        <a href="{#{{ path('product_delete', {'id': product.id}) }}#}"><i class="bi bi-trash3 text-danger"></i></a>
+                        <a href="{{ path('update_product', {'id': product.id}) }}"><i class="bi bi-pencil-square text-primary"></i></a>
+                        <a href="{{ path('delete_product', {'id': product.id}) }}"><i class="bi bi-trash3 text-danger"></i></a>
                     </td>
                 </tr>
             {% endfor %}    
@@ -41,7 +42,7 @@
     </table>
 
     <div class="text-end mt-4">
-        <a href="{#{{ path('product_create') }}#}" class="btn btn-success">Ajouter un produit</a>
+        <a href="{{ path('create_product') }}" class="btn btn-success">Ajouter un produit</a>
     </div>
     
 {% endblock %}
