contact controller creation de la page de contact

--- a/templates/__partials/footer.html.twig
+++ b/templates/__partials/footer.html.twig
@@ -6,11 +6,11 @@
             <h5>QUELQUES LIENS</h5>
             <hr class="m-3">
             <ul>
-             <li><a href="">Accueil</a></li>
-             <li><a href="">Femme</a></li>
-             <li><a href="">Homme</a></li>
-             <li><a href="">Enfant</a></li>
-             <li><a href="">Contact</a></li>
+             <li><a href="{{path('home')}}">Accueil</a></li>
+             <li><a href="{{path('products')}}">Femme</a></li>
+             <li><a href="{{path('products')}}">Homme</a></li>
+             <li><a href="{{path('products')}}">Enfant</a></li>
+             <li><a href="{{path('contact')}}">Contact</a></li>
              <li><a href="">FAQ</a></li>
             </ul> 
            
