--- a/templates/__partials/header.html.twig
+++ b/templates/__partials/header.html.twig
@@ -24,11 +24,11 @@
     <div></div>
 
     <nav class="nav">
-      <a id = "icon2" href="#" class="nav-link text-white">ACCUEIL</a>
-      <a id = "icon2" href="" class="nav-link text-white">FEMME</a>
-      <a id = "icon2" href="#" class="nav-link text-white">HOMME</a>
-      <a id = "icon2" href="#" class="nav-link text-white">ENFANT</a>
-      <a id = "icon2" href="#" class="nav-link text-white">CONTACT</a>
+      <a id = "icon2" href="{{path('home')}}" class="nav-link text-white">ACCUEIL</a>
+      <a id = "icon2" href="{{path('products')}}" class="nav-link text-white">FEMME</a>
+      <a id = "icon2" href="{{path('products')}}" class="nav-link text-white">HOMME</a>
+      <a id = "icon2" href="{{path('products')}}" class="nav-link text-white">ENFANT</a>
+      <a id = "icon2" href="{{path('contact')}}" class="nav-link text-white">CONTACT</a>
       <a id = "icon2" href="#" class="nav-link text-white">CONNEXION</a>
     </nav>
 
