--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -29,21 +29,13 @@
         <header>
 
             {% include "__partials/header.html.twig" %}
-
+           
         </header>
-
         <main>
-
-                        
-                        <h1>{% block h1 %}{% endblock %}</h1>
-        
-                
-
-
-
-          {% block body %}
-          {% endblock %}  
-
+            
+                    {% block body %}{% endblock %}
+              
+      
         </main>
 
         <footer>
