--- a/templates/brand/update.html.twig
+++ b/templates/brand/update.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 
-    <h1 class="mb-5">Modifier une marque</h1>
+    <h1 class="mb-5 text-center">Modifier une marque</h1>
 
     {{ form_start(brandForm) }}
 
