--- a/templates/brand/brandAdmin.html.twig
+++ b/templates/brand/brandAdmin.html.twig
@@ -6,7 +6,7 @@
 
 <h1 class="pb-5 text-center">Liste des Marques</h1>
 
-<table>
+<table width="100%">
     <thead>
         <tr>
             <th>N°</th>
