--- a/templates/category/categoryAdmin.html.twig
+++ b/templates/category/categoryAdmin.html.twig
@@ -6,7 +6,7 @@
 
 <h1 class="pb-5 text-center">Liste des catégories</h1>
 
-<table>
+<table width="100%">
     <thead>
         <tr>
             <th>N°</th>
