--- a/templates/product/adminList.html.twig
+++ b/templates/product/adminList.html.twig
@@ -16,7 +16,7 @@
                 <th>Prix Soldé</th>
                 <th>Catégorie</th>
                 <th>Marques</th>
-                {#<th>Sexe</th>#}
+                <th>Sexe</th>
                 <th>Actions</th>
             </tr>
         </thead>
@@ -30,8 +30,7 @@
                     <td>{{ product.priceSolde }}</td>
                     <td>{{ product.category.name }}</td>
                     <td>{{ product.brand.name }}</td>
-                    {#<td>{{ product.sexe.name }}</td>
-                    <td>#}
+                    <td>{{ product.sexe.name }}</td>                   
                     <td>
                         <a href="{{ path('update_product', {'id': product.id}) }}"><i class="bi bi-pencil-square text-primary"></i></a>
                         <a href="{{ path('delete_product', {'id': product.id}) }}"><i class="bi bi-trash3 text-danger"></i></a>
