--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -1,20 +1,37 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello ProductController!{% endblock %}
+{% block description %}{% endblock %}
+
+{% block title %}produits{% endblock %}
+
+{% block stylesheets %}
+
+{% endblock %}
+
+{% block h1 %}Produits{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    {% for product in products %}
+        <div class="col-md-6 col-lg-4 col-xl-3 p-3">
+            <div class="card">
+                {% if product.createdAt|date('Y-m-d') >= "now"|date_modify("-20 day")|date('Y-m-d') %}
+                    <span class="new_product">Nouveauté</span>
+                {% endif %}
+                <div class="card-body">
+                    <h5 class="card-title">{{ product.name }}</h5>
+                    <p class="card-text">{{ product.abstract|u.truncate(70, '...', false) }}</p>
+                </div>
+                <ul class="list-group list-group-flush">
+                    
+                    <li class="list-group-item">{{ product.price|number_format(2, ',', ' ') }} €</li>
+                </ul>
+                <div class="card-body text-center">
+                    <a href="{#{{ path('product_show', {'slug': product.slug}) }}#}" class="card-link btn btn-outline-primary">Détails</a>
+                    <a href="#" class="card-link btn btn-{{ product.quantity != 0 ? 'success' : 'danger disabled' }}"><i class="bi bi-cart-plus-fill"></i></a>
+                </div>
+            </div>
+        </div>
+    {% endfor %}
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/xampp/htdocs/SYMF/projet/src/Controller/ProductController.php'|file_link(0) }}">src/Controller/ProductController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/xampp/htdocs/SYMF/projet/templates/product/index.html.twig'|file_link(0) }}">templates/product/index.html.twig</a></code></li>
-    </ul>
-</div>
 {% endblock %}
