--- a/templates/product/update.html.twig
+++ b/templates/product/update.html.twig
@@ -6,131 +6,102 @@
 
     <h1 class="mb-5">Modifier un produit</h1>
 
-    {# {{ form(productForm) }} #}
-
+   
     {{ form_start(productForm) }}
 
-        <div class="row">
-            <div class="col-6">
-                {# {{ form_row(productForm.name) }} #}
-                {{ form_label(productForm.name, 'Nom') }}
-                {{ form_errors(productForm.name) }}
-                {{ form_widget(productForm.name, {
-                    'attr': {
-                        'placeholder': 'Ex.: David'
-                    }
-                }) }}
-                {{ form_help(productForm.name) }}
-            </div>
-            <div class="col-3">
-                {{ form_row(productForm.quantity, {
-                    'label': 'Quantité',
-                    'attr': {
-                        'placeholder': 'Ex.: 12'
-                    }
-                }) }}
-            </div>
-            <div class="col-3">
-                {{ form_row(productForm.price, {
-                    'label': 'Prix (en €)',
-                    'attr': {
-                        'placeholder': 'Ex.: 123.45'
-                    }
-                }) }}
-            </div>
+    <div class="row">
+        <div class="col-6">
+            {{ form_label(productForm.name, 'Nom') }}
+            {{ form_errors(productForm.name) }}
+            {{ form_widget(productForm.name, {
+                'attr': {
+                    'placeholder': 'Ex.: T-shirt'
+                }
+            }) }}
+            {{ form_help(productForm.name) }}
         </div>
-
-        <div class="row">
-            <div class="col-6">
-                {{ form_row(productForm.abstract, {
-                    'label': 'Résumé',
-                    'attr': {
-                        'placeholder': 'Ex.: Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita provident et quod. Vero aliquid praesentium earum eos, facilis doloremque tempora ab quidem incidunt ! Ea, dignissimos. Quas sed modi sapiente dolorem ?'
-                    }
-                }) }}
-            </div>
-            <div class="col-6">
-                {{ form_row(productForm.description, {
-                    'label': 'Description',
-                    'attr': {
-                        'placeholder': 'Ex.: Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita provident et quod. Vero aliquid praesentium earum eos, facilis doloremque tempora ab quidem incidunt ! Ea, dignissimos. Quas sed modi sapiente dolorem ?'
-                    }
-                }) }}
-            </div>
+        <div class="col-3">
+            {{ form_row(productForm.quantity, {
+                'label': 'Quantité',
+                'attr': {
+                    'placeholder': 'Ex.: 12'
+                }
+            }) }}
         </div>
-
-        <div class="row">
-            <div class="col">
-                {{ form_row(productForm.min_players, {
-                    'label': 'Joueurs minimum',
-                    'attr': {
-                        'placeholder': 'Ex.: 1'
-                    }
-                }) }}
-            </div>
-            <div class="col">
-                {{ form_row(productForm.max_players, {
-                    'label': 'Joueurs maximum',
-                    'attr': {
-                        'placeholder': 'Ex.: 2'
-                    }
-                }) }}
-            </div>
-            <div class="col">
-                {{ form_row(productForm.minimum_age, {
-                    'label': 'Âge minimum',
-                    'attr': {
-                        'placeholder': 'Ex.: 3'
-                    }
-                }) }}
-            </div>
-            <div class="col">
-                {{ form_row(productForm.duration, {
-                    'label': 'Durée'
-                }) }}
-            </div>
-            <div class="col">
-                {{ form_row(productForm.editor, {
-                    'label': 'Éditeur',
-                    'attr': {
-                        'placeholder': 'Ex.: David'
-                    }
-                }) }}
-            </div>
-            <div class="col">
-                {{ form_row(productForm.category, {
-                    'label': 'Catégorie',
-                    'placeholder': '-- sélectionner --'
-                }) }}
-            </div>
+        <div class="col-3">
+            {{ form_row(productForm.price, {
+                'label': 'Prix (en €)',
+                'attr': {
+                    'placeholder': 'Ex.: 123.45'
+                }
+            }) }}
         </div>
-
-        <div class="row">
-            <div class="col-6">
-                {{ form_row(productForm.theme, {
-                    'label': 'Thème(s)',
-                    'attr': {
-                        'placeholder': 'Ex.: France, guerre'
-                    }
-                }) }}
-            </div>
-            <div class="col-6">
-                {{ form_row(productForm.mecanism, {
-                    'label': 'Mécanisme(s)',
-                    'attr': {
-                        'placeholder': 'Ex.: placement, draft'
-                    }
-                }) }}
-            </div>
+        <div class="col-3">
+            {{ form_row(productForm.priceSolde, {
+                'label': 'Prix Soldé (en €)',
+                'attr': {
+                    'placeholder': 'Ex.: 123.45'
+                }
+            }) }}
         </div>
-
-        <div class="row">
-            <div class="col-12 text-end my-3">
-                <a href="{{ path('admin_products')}}" class="btn btn-outline-danger me-3">Annuler</a>
-                <button class="btn btn-success">Modifier</button>
-            </div>
+        <div class="col-3">
+            {{ form_row(productForm.reduction, {
+                'label': 'Reduction (en %)',
+                'attr': {
+                    'placeholder': 'Ex.: 10'
+                }
+            }) }}
         </div>
+    </div>
 
-    {{ form_end(productForm) }}
+    <div class="row">
+        <div class="col-6">
+            {{ form_row(productForm.abstract, {
+                'label': 'Résumé',
+                'attr': {
+                    'placeholder': 'Ex.: Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita provident et quod. Vero aliquid praesentium earum eos, facilis doloremque tempora ab quidem incidunt ! Ea, dignissimos. Quas sed modi sapiente dolorem ?'
+                }
+            }) }}
+        </div>
+        <div class="col-6">
+            {{ form_row(productForm.description, {
+                'label': 'Description',
+                'attr': {
+                    'placeholder': 'Ex.: Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita provident et quod. Vero aliquid praesentium earum eos, facilis doloremque tempora ab quidem incidunt ! Ea, dignissimos. Quas sed modi sapiente dolorem ?'
+                }
+            }) }}
+        </div>
+        <div class="col">
+            {{ form_row(productForm.category, {
+                'label': 'Catégorie',
+                'placeholder': '-- sélectionner --'
+            }) }}
+        </div>
+        <div class="col">
+            {{ form_row(productForm.brand, {
+                'label': 'Marque',
+                'placeholder': '-- sélectionner --'
+            }) }}
+        </div>
+        <div class="col">
+            {{ form_row(productForm.sexe, {
+                'label': 'Genre',
+                'placeholder': '-- sélectionner --'
+            }) }}
+        </div>
+         {#<div class="col"> 
+            {{ form_row(productForm.image, {
+                'label': 'image',
+                'placeholder': '-- sélectionner --'
+            }) }}
+        </div>#}
 
+    <div class="row">
+        <div class="col-12 text-end my-3">
+            <a href="{{ path('admin_products')}}" class="btn btn-outline-danger me-3">Annuler</a>
+            <button class="btn btn-success">{{ app.request.attributes.get('_route') == 'create_product' ? 'Créer' : 'Modifier' }} </button>
+        </div>
+    </div>
+
+{{ form_end(productForm) }}
 {% endblock %}
