--- a/templates/category/create.html.twig
+++ b/templates/category/create.html.twig
@@ -28,15 +28,15 @@
                     }
                 }) }}
             </div>
-            <div class="col-3">
+            {# <div class="col-3"> 
                 {{ form_row(categoryForm.img, {
                     'label': 'Description',
                     'attr': {
                         'placeholder': 'Ex.: Image'
                     }
                 }) }}
-            </div>
-        </div>
+            </div>#}
+        
 
         <div class="row">
             <div class="col-12 text-end my-3">
