--- a/templates/category/form.html.twig
+++ b/templates/category/form.html.twig
@@ -30,14 +30,14 @@
                 }
             }) }}
         </div>
-        <div class="col-3">
+        {# <div class="col-3"> 
             {{ form_row(categoryForm.img, {
                 'label': 'Description',
                 'attr': {
                     'placeholder': 'Ex.: Image'
                 }
-            }) }}
-        </div>
+            }) }}#}
+    
     </div>
 
     <div class="row">
