--- a/templates/product/form.html.twig
+++ b/templates/product/form.html.twig
@@ -90,7 +90,7 @@
                 }) }}
             </div>
              {#<div class="col"> 
-                {{ form_row(productForm.image, {
+                {{ form_row(productForm.images, {
                     'label': 'image',
                     'placeholder': '-- sélectionner --'
                 }) }}
