--- a/templates/category/categoryAdmin.html.twig
+++ b/templates/category/categoryAdmin.html.twig
@@ -18,7 +18,7 @@
         {% for category in categories|reverse %}
             <tr>
                 <td>{{ loop.revindex }}</td>
-                <td><img src="{{category.img}}" alt="image principale de la categorie {{ category.name }}" class="pe-3"> {{ category.name }}</td>
+                 <td>{#<img src="{{category.img}}" alt="image principale de la categorie {{ category.name }}" class="pe-3">#} {{ category.name }}</td> 
                 <td>
                     <a href="{{ path('category_update', {'id': category.id}) }}"><i class="bi bi-pencil-square text-primary"></i></a>
                         <a href="{{ path('category_delete', {'id': category.id}) }}"><i class="bi bi-trash3 text-danger"></i></a>
