--- a/templates/product/create.html.twig
+++ b/templates/product/create.html.twig
@@ -87,8 +87,8 @@
                     'placeholder': '-- sélectionner --'
                 }) }}
             </div>
-            {# <div class="col"> 
-                {{ form_row(productForm.image, {
+            {#<div class="col"> 
+                {{ form_row(productForm.images, {
                     'label': 'image',
                     'placeholder': '-- sélectionner --'
                 }) }}
@@ -97,7 +97,7 @@
         <div class="row">
             <div class="col-12 text-end my-3">
                 <a href="{{ path('admin_products')}}" class="btn btn-outline-danger me-3">Annuler</a>
-                <button class="btn btn-success">{{ app.request.attributes.get('_route') == 'create_product' ? 'Créer' : 'Modifier' }} </button>
+                <button class="btn btn-success">Créer</button>
             </div>
         </div>
 
