sexecontroller pour les pages homme femm et enfant

--- a/templates/__partials/footer.html.twig
+++ b/templates/__partials/footer.html.twig
@@ -1,62 +1,102 @@
-{% block stylesheets %} <link rel="stylesheet" href="{{ asset('css/footer.css')}}"> {% endblock %}
+{% block stylesheets %}
+	<link rel="stylesheet" href="{{ asset('css/footer.css')}}">
+{% endblock %}
+
 
 <div class="container-fluid text-dark">
-    <div class="row text-center p-5">
-        <div class="col-3">
-            <h5>QUELQUES LIENS</h5>
-            <hr class="m-3">
-            <ul>
-             <li><a href="{{path('home')}}">Accueil</a></li>
-             <li><a href="{{path('products')}}">Femme</a></li>
-             <li><a href="{{path('products')}}">Homme</a></li>
-             <li><a href="{{path('products')}}">Enfant</a></li>
-             <li><a href="{{path('contact')}}">Contact</a></li>
-             <li><a href="">FAQ</a></li>
-            </ul> 
-           
-        </div>
-        <div class="col-3">
-            <h5>COORDONNES</h5>
-            <hr class="m-3 ">
-            <p>{{contact_company}}</p> 
-            <p>{{contact_address}}</p>
-            <p>{{contact_zip ~' '~ contact_city}}</p>
-            <p>{{contact_phone}}</p>
-            <p>{{contact_email}}</p>
-        </div>
-
-        <div class="col-3">
-
-            <h5>RESEAUX SOCIAUX</h5>
-            <hr class="m-3">
-            <ul>
-                <li><span><i class="bi bi-facebook"></i></span></li>
-                <li><span><i class="bi bi-instagram"></i></span></li>
-                <li><span><i class="bi bi-snapchat"></i></span></li>
-                <li><span><i class="bi bi-tiktok"></i></span></li>
-        
-        </div>
-
-        <div class="col-3">
-            <h5>ASSISTANCE</h5>
-            <hr class="m-3">
-            <ul>
-                <li><a href="">Politique de Confidentialité</a></li>
-                <li><a href="">Termes et Conditions </a></li>
-                <li></li>
-                <li></li>
-            </ul>
-           
-        </div>
+	<div class="row text-center p-5">
+		<div class="col-3">
+			<h5>QUELQUES LIENS</h5>
+			<hr class="m-3">
 
 
+			<ul>
+				<li>
+					<a href="{{path('home')}}">Accueil<a></li>
+						<li>
+							<a href="#">Femme</a>
+						</li>
+						<li>
+							<a href="#">Homme</a>
+						</li>
+						<li>
+							<a href="#">Enfant</a>
+						</li>
+						<li>
+							<a href="{{path('contact')}}">Contact</a>
+						</li>
+						<li>
+							<a href="">FAQ</a>
+						</li>
+					</ul>
+				</li>
+			</div>
 
-    </div>
 
-    <p>Copyright &copy; {{ "now"|date("Y") }} - Willy TALOM | Articles extraits du site <a href="https://www.videdressing.com/" target="_blank">videdressing.com</a></p>
-    
+			<div class="col-3">
+				<h5>COORDONNES</h5>
+				<hr class="m-3 ">
+				<p>{{contact_company}}</p>
+				<p>{{contact_address}}</p>
+				<p>{{contact_zip ~' '~ contact_city}}</p>
+				<p>{{contact_phone}}</p>
+				<p>{{contact_email}}</p>
+			</div>
 
-</div>
+			<div class="col-3">
+
+				<h5>RESEAUX SOCIAUX</h5>
+				<hr class="m-3">
+				<ul>
+					<li>
+						<span>
+							<i class="bi bi-facebook"></i>
+						</span>
+					</li>
+					<li>
+						<span>
+							<i class="bi bi-instagram"></i>
+						</span>
+					</li>
+					<li>
+						<span>
+							<i class="bi bi-snapchat"></i>
+						</span>
+					</li>
+					<li>
+						<span>
+							<i class="bi bi-tiktok"></i>
+						</span>
+					</li>
+
+				</div>
+
+				<div class="col-3">
+					<h5>ASSISTANCE</h5>
+					<hr class="m-3">
+					<ul>
+						<li>
+							<a href="">Politique de Confidentialité</a>
+						</li>
+						<li>
+							<a href="">Termes et Conditions
+							</a>
+						</li>
+						<li></li>
+						<li></li>
+					</ul>
+
+				</div>
 
 
+			</div>
 
+			<p>Copyright &copy;
+				{{ "now"|date("Y") }}
+				- Willy TALOM | Articles extraits du site
+				<a href="https://www.videdressing.com/" target="_blank">videdressing.com</a>
+			</p>
+
+
+		</div>
+	</div>
