--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -2,36 +2,47 @@
 
 {% block description %}{% endblock %}
 
-{% block title %}produits{% endblock %}
-
-{% block stylesheets %}
-
+{% block title %}produits
 {% endblock %}
 
-{% block h1 %}Produits{% endblock %}
+{% block stylesheets %}{% endblock %}
+
+{% block h1 %}Produits
+{% endblock %}
 
 {% block body %}
 
-    {% for product in products %}
-        <div class="col-md-6 col-lg-4 col-xl-3 p-3">
-            <div class="card">
-                {% if product.createdAt|date('Y-m-d') >= "now"|date_modify("-20 day")|date('Y-m-d') %}
-                    <span class="new_product">Nouveauté</span>
-                {% endif %}
-                <div class="card-body">
-                    <h5 class="card-title">{{ product.name }}</h5>
-                    <p class="card-text">{{ product.abstract|u.truncate(70, '...', false) }}</p>
-                </div>
-                <ul class="list-group list-group-flush">
-                    
-                    <li class="list-group-item">{{ product.price|number_format(2, ',', ' ') }} €</li>
-                </ul>
-                <div class="card-body text-center">
-                    <a href="{#{{ path('product_show', {'slug': product.slug}) }}#}" class="card-link btn btn-outline-primary">Détails</a>
-                    <a href="#" class="card-link btn btn-{{ product.quantity != 0 ? 'success' : 'danger disabled' }}"><i class="bi bi-cart-plus-fill"></i></a>
-                </div>
-            </div>
-        </div>
-    {% endfor %}
+	{% for sexe in sexes %}
 
+		<div class="col-md-6 col-lg-4 col-xl-3 p-3">
+			<div class="card">
+				<img src="" class="card-img-top p-3" alt="image principale du jeu {{ product.sexe.name }}">
+				{% if product.createdAt|date('Y-m-d') >= "now"|date_modify("-20 day")|date('Y-m-d') %}
+					<span class="new_product">Nouveauté</span>
+				{% endif %}
+				<div class="card-body">
+					<h5 class="card-title">{{ sexe.product.name }}</h5>
+					<p class="card-text">{{ product.abstract|u.truncate(70, '...', false) }}</p>
+				</div>
+				<div class="card-body text-center">
+					<a href="" class="card-link btn btn-outline-primary">Détails</a>
+					<a href="#" class="">
+						<i class="bi bi-cart-plus-fill"></i>
+					</a>
+				</div>
+			</div>
+			<ul class="list-group list-group-flush">
+
+				<li class="list-group-item">{{ product.sexe.price|number_format(2, ',', ' ') }}
+					€</li>
+			</ul>
+			<div class="card-body text-center">
+				<a href="{#{{ path('product_show', {'slug': product.slug}) }}#}" class="card-link btn btn-outline-primary">Détails</a>
+				<a href="#" class="card-link btn btn-{{ product.quantity != 0 ? 'success' : 'danger disabled' }}">
+					<i class="bi bi-cart-plus-fill"></i>
+				</a>
+			</div>
+		</div>
+
+	{% endfor %}
 {% endblock %}
