--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,6 +3,11 @@
 {% block title %}accueil
 {% endblock %}
 
+{% block stylesheets %}
+	<link rel="stylesheet" href="{{ asset('css/base.css') }}">
+{% endblock %}
+
+
 {% block description %}VDM - votre nouvelle boutique de ventes de ventements en ligne
 {% endblock %}
 
