--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -12,7 +12,7 @@
 
 {% block body %}
 
-	{% for sexe in sexes %}
+	{% for sexes in sexe %}
 
 		<div class="col-md-6 col-lg-4 col-xl-3 p-3">
 			<div class="card">
