--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,55 +1,61 @@
 <!DOCTYPE html>
 <html lang="fr">
 
-    <head>
+	<head>
 
-        <meta name="author" content="Willy TALOM">
-        <meta name="keywords" content="Ventes de vetements Hommes Femmes Enfants">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <meta charset="UTF-8">
-        <meta name="description" content="{% block description %}{% endblock %}">
+		<meta name="author" content="Willy TALOM">
+		<meta name="keywords" content="Ventes de vetements Hommes Femmes Enfants">
+		<meta http-equiv="X-UA-Compatible" content="ie=edge">
+		<meta charset="UTF-8">
+		<meta name="description" content="{% block description %}{% endblock %}">
 
-        <title>VDM {% block title %}{% endblock %}</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-        <link rel="stylesheet" href="{{ asset('css/base.css') }}">
-        
+		<title>VDM
+			{% block title %}{% endblock %}
+		</title>
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+		<link rel="stylesheet" href="{{ asset('css/base.css') }}"> {% block stylesheets %}{% endblock %}
 
-        {% block stylesheets %}
 
-        
-    
-        {% endblock %}
+		</head>
 
-   
-    </head>
+		<body>
 
-    <body>
+			<header>
 
-        <header>
+				{% include "__partials/header.html.twig" %}
 
-            {% include "__partials/header.html.twig" %}
-           
-        </header>
-        <main>
-            
-                    {% block body %}{% endblock %}
-              
-      
-        </main>
+			</header>
+			<main>
 
-        <footer>
+				{% for label, messages in app.flashes %}
+					{% for message in messages %}
+						<div class="flash-{{ label }} bg-{{ label }} text-light p-3 rounded mb-5">
+							{{ message }}
+						</div>
+					{% endfor %}
+				{% endfor %}
 
-            {% include "__partials/footer.html.twig"%}
+				{% block h1 %}{% endblock %}
 
-        </footer>
 
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+				{% block body %}{% endblock %}
 
-        <script src="{{ asset('js/base.js') }}"></script>
 
-        {% block javascripts %}{% endblock %}
-        
-    </body>
+			</main>
 
-</html>
+			<footer>
+
+				{% include "__partials/footer.html.twig"%}
+
+			</footer>
+
+			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+
+			<script src="{{ asset('js/base.js') }}"></script>
+
+			{% block javascripts %}{% endblock %}
+
+		</body>
+
+	</html>
