--- a/templates/baseAdmin.html.twig
+++ b/templates/baseAdmin.html.twig
@@ -1,81 +1,117 @@
 <!DOCTYPE html>
 <html lang="fr">
 
-    <head>
+	<head>
 
-        <meta name="author" content="Willy TALOM">
-        <meta name="keywords" content="Ventes de vetements Hommes Femmes Enfants">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <meta charset="UTF-8">
-        <meta name="description" content="{% block description %}{% endblock %}">
+		<meta name="author" content="Willy TALOM">
+		<meta name="keywords" content="Ventes de vetements Hommes Femmes Enfants">
+		<meta http-equiv="X-UA-Compatible" content="ie=edge">
+		<meta charset="UTF-8">
+		<meta name="description" content="{% block description %}{% endblock %}">
 
-        <title>VDM - Admin - {% block title %}{% endblock %}</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-        <link rel="stylesheet" href="{{ asset('css/base.css') }}">
-        
+		<title>VDM - Admin -
+			{% block title %}{% endblock %}
+		</title>
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+		<link rel="stylesheet" href="{{ asset('css/base.css') }}"> {% block stylesheets %}{% endblock %}
 
-        {% block stylesheets %}
 
-        
-    
-        {% endblock %}
+		</head>
 
-   
-    </head>
+		<body>
 
-    <body>
+			<header>
 
-        <header>
+				<nav class="container-fluid navbar navbar-dark bg-dark text-light p-4 text-center">
+					<div class="col-12">
+						<h2>Vente de Vetements - espace administrateur</h2>
+					</div>
+				</nav>
+				<nav class="container-fluid navbar navbar-dark bg-primary text-light p-4 text-center">
 
-            <nav class="container-fluid navbar navbar-dark bg-dark text-light p-4 text-center">
-                    <div class="col-12">
-                        <h2>Vente de Vetements - espace administrateur</h2>
-                    </div>
-            </nav>
-            <nav class="container-fluid navbar navbar-dark bg-primary text-light p-4 text-center">
-               
-                    <a class="py-2"><a href="" class="text-light" title="accueil administrateur"><i class="bi bi-house fs-4"></i></a></a>
-                    <a class="py-2"><a href="{{path('admin_products')}}" class="text-light" title="produits"><i class="bi bi-dice-5 fs-4"></i></a></a>
-                    <a class="py-2"><a href="{{path('admin_category')}}" class="text-light" title="catégories"><i class="bi bi-tags fs-4"></i></a></a>
-                    <a class="py-2"><a href="{{path('admin_brand')}}" class="text-light" title="marques"><i class="bi bi-microsoft fs-4"></i></a></a>
-                    <a class="py-2"><a href="#" class="text-light" title="commandes"><i class="bi bi-list-ol fs-4"></i></a></a>
-                    <a class="py-2"><a href="#" class="text-light" title="utilisateurs"><i class="bi bi-people fs-4"></i></a></a>
-                    <a class="py-2"><a href="{{path('home')}}" class="text-light" title="accueil site"><i class="bi bi-house fs-4"></i></a></a>
-                    <a class="py-2"><a href="" class="text-light" title="déconnexion"><i class="bi bi-door-open fs-4"></i></a></a>
-          
+					<a class="py-2">
+						<a href="" class="text-light" title="accueil administrateur">
+							<i class="bi bi-house fs-4"></i>
+						</a>
+					</a>
+					<a class="py-2">
+						<a href="{{path('admin_products')}}" class="text-light" title="produits">
+							<i class="bi bi-dice-5 fs-4"></i>
+						</a>
+					</a>
+					<a class="py-2">
+						<a href="{{path('admin_category')}}" class="text-light" title="catégories">
+							<i class="bi bi-tags fs-4"></i>
+						</a>
+					</a>
+					<a class="py-2">
+						<a href="{{path('admin_sexe')}}" class="text-light" title="sexe">
 
-          </nav>
+							<i class="bi bi-bookmarks-fill fs-4"></i>
 
-        </header>
+						</a>
+					</a>
 
-        <main class="container-fluid">
-            <div class="row">
-                <div class="col-11">
-                    <div class="row p-5">
-                        {% for label, messages in app.flashes %}
-                            {% for message in messages %}
-                                <div class="flash-{{ label }} bg-{{ label }} text-light p-3 rounded mb-5">
-                                    {{ message }}
-                                </div>
-                            {% endfor %}
-                        {% endfor %}
-                    </div>
-                </div>
-            </div>
-            {% block body %}{% endblock %}
-        </main>
+					<a class="py-2">
+						<a href="{{path('admin_brand')}}" class="text-light" title="marques">
+							<i class="bi bi-microsoft fs-4"></i>
+						</a>
+					</a>
+					<a class="py-2">
+						<a href="#" class="text-light" title="commandes">
+							<i class="bi bi-list-ol fs-4"></i>
+						</a>
+					</a>
+					<a class="py-2">
+						<a href="#" class="text-light" title="utilisateurs">
+							<i class="bi bi-people fs-4"></i>
+						</a>
+					</a>
+					<a class="py-2">
+						<a href="{{path('home')}}" class="text-light" title="accueil site">
+							<i class="bi bi-house fs-4"></i>
+						</a>
+					</a>
 
-        <footer class="text-dark text-center mt-5 ">
-            <p>Copyright © 2022 - Willy TALOM</p>
-        </footer>
+					<a class="py-2">
+						<a href="" class="text-light" title="déconnexion">
+							<i class="bi bi-door-open fs-4"></i>
+						</a>
+					</a>
 
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 
-        <script src="{{ asset('js/base.js') }}"></script>
+				</nav>
 
-        {% block javascripts %}{% endblock %}
-        
-    </body>
+			</header>
 
-</html>
+			<main class="container-fluid">
+				<div class="row">
+					<div class="col-11">
+						<div class="row p-5">
+							{% for label, messages in app.flashes %}
+								{% for message in messages %}
+									<div class="flash-{{ label }} bg-{{ label }} text-light p-3 rounded mb-5">
+										{{ message }}
+									</div>
+								{% endfor %}
+							{% endfor %}
+						</div>
+					</div>
+				</div>
+				{% block body %}{% endblock %}
+			</main>
+
+			<footer class="text-dark text-center mt-5 ">
+				<p>Copyright © 2022 - Willy TALOM</p>
+			</footer>
+
+			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+
+			<script src="{{ asset('js/base.js') }}"></script>
+
+			{% block javascripts %}{% endblock %}
+
+		</body>
+
+	</html>
