--- a/templates/product/create.html.twig
+++ b/templates/product/create.html.twig
@@ -1,106 +1,116 @@
 {% extends "baseAdmin.html.twig" %}
 
-{% block title %}création produit{% endblock %}
+{% block title %}création produit
+{% endblock %}
 
 {% block body %}
 
 
-    {{ form_start(productForm) }}
+	{{ form_start(productForm) }}
 
-        <div class="row">
-            <div class="col-6">
-                {{ form_label(productForm.name, 'Nom') }}
-                {{ form_errors(productForm.name) }}
-                {{ form_widget(productForm.name, {
+	<div class="row">
+		<div class="col-6">
+			{{ form_label(productForm.name, 'Nom') }}
+			{{ form_errors(productForm.name) }}
+			{{ form_widget(productForm.name, {
                     'attr': {
                         'placeholder': 'Ex.: T-shirt'
                     }
                 }) }}
-                {{ form_help(productForm.name) }}
-            </div>
-            <div class="col-3">
-                {{ form_row(productForm.quantity, {
+			{{ form_help(productForm.name) }}
+		</div>
+		<div class="col-3">
+			{{ form_row(productForm.quantity, {
                     'label': 'Quantité',
                     'attr': {
                         'placeholder': 'Ex.: 12'
                     }
                 }) }}
-            </div>
-            <div class="col-3">
-                {{ form_row(productForm.price, {
+		</div>
+		<div class="col-3">
+			{{ form_row(productForm.price, {
                     'label': 'Prix (en €)',
                     'attr': {
                         'placeholder': 'Ex.: 123.45'
                     }
                 }) }}
-            </div>
-            <div class="col-3">
-                {{ form_row(productForm.priceSolde, {
+		</div>
+		<div class="col-3">
+			{{ form_row(productForm.priceSolde, {
                     'label': 'Prix Soldé (en €)',
                     'attr': {
                         'placeholder': 'Ex.: 123.45'
                     }
                 }) }}
-            </div>
-            <div class="col-3">
-                {{ form_row(productForm.reduction, {
+		</div>
+		<div class="col-3">
+			{{ form_row(productForm.reduction, {
                     'label': 'Reduction (en %)',
                     'attr': {
                         'placeholder': 'Ex.: 10'
                     }
                 }) }}
-            </div>
-        </div>
+		</div>
+		<div class="col-3">
+			{{ form_row(productForm.reference, {
+                    'label': 'Reference du produit ',
+                    'attr': {
+                        'placeholder': 'Ex.: 154TR7'
+                    }
+                }) }}
+		</div>
 
-        <div class="row">
-            <div class="col-6">
-                {{ form_row(productForm.abstract, {
+	</div>
+
+	<div class="row">
+		<div class="col-6">
+			{{ form_row(productForm.abstract, {
                     'label': 'Résumé',
                     'attr': {
                         'placeholder': 'Ex.: Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita provident et quod. Vero aliquid praesentium earum eos, facilis doloremque tempora ab quidem incidunt ! Ea, dignissimos. Quas sed modi sapiente dolorem ?'
                     }
                 }) }}
-            </div>
-            <div class="col-6">
-                {{ form_row(productForm.description, {
+		</div>
+		<div class="col-6">
+			{{ form_row(productForm.description, {
                     'label': 'Description',
                     'attr': {
                         'placeholder': 'Ex.: Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita provident et quod. Vero aliquid praesentium earum eos, facilis doloremque tempora ab quidem incidunt ! Ea, dignissimos. Quas sed modi sapiente dolorem ?'
                     }
                 }) }}
-            </div>
-            <div class="col">
-                {{ form_row(productForm.category, {
+		</div>
+		<div class="col">
+			{{ form_row(productForm.category, {
                     'label': 'Catégorie',
                     'placeholder': '-- sélectionner --'
                 }) }}
-            </div>
-            <div class="col">
-                {{ form_row(productForm.brand, {
+		</div>
+		<div class="col">
+			{{ form_row(productForm.brand, {
                     'label': 'Marque',
                     'placeholder': '-- sélectionner --'
                 }) }}
-            </div>
-            <div class="col">
-                {{ form_row(productForm.sexe, {
+		</div>
+		<div class="col">
+			{{ form_row(productForm.sexe, {
                     'label': 'Genre',
                     'placeholder': '-- sélectionner --'
                 }) }}
-            </div>
-            {#<div class="col"> 
-                {{ form_row(productForm.images, {
-                    'label': 'image',
-                    'placeholder': '-- sélectionner --'
-                }) }}
-            </div>#}
-    
-        <div class="row">
-            <div class="col-12 text-end my-3">
-                <a href="{{ path('admin_products')}}" class="btn btn-outline-danger me-3">Annuler</a>
-                <button class="btn btn-success">Créer</button>
-            </div>
-        </div>
+		</div>
+		{#<div class="col"> 
+				                {{ form_row(productForm.images, {
+				                    'label': 'image',
+				                    'placeholder': '-- sélectionner --'
+				                }) }}
+				            </div>#}
 
-    {{ form_end(productForm) }}
+		<div class="row">
+			<div class="col-12 text-end my-3">
+				<a href="{{ path('admin_products')}}" class="btn btn-outline-danger me-3">Annuler</a>
+				<button class="btn btn-success">Créer</button>
+			</div>
+		</div>
 
-{% endblock %}
+		{{ form_end(productForm) }}
+
+	{% endblock %}
