--- a/templates/product/sexe.html.twig
+++ b/templates/product/sexe.html.twig
@@ -1,4 +1,43 @@
-{% for product in products %}
-	{{ product.name }}
-	<br>
-{% endfor %}
+{% extends 'base.html.twig' %}
+
+{% block body %}
+
+	<div class="col-12">
+		<div class="row">
+			{% for product in products %}
+
+				<div class="col-md-6 col-lg-4 col-xl-3 p-3">
+
+
+					<div class="card h-50">
+
+						<div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Nouveauté</div>
+						<img class="card-img-top" src="https://via.placeholder.com/360x360.jpg/CCCCC" alt="produit de {{ product.name }}"/>
+						<div class="card-body p-4">
+							<div class="text-center">
+								<h5 class="fw-bolder">{{ product.sexe.name }}</h5>
+								<h6 id="text-des">{{ product.description|u.truncate(70,'...', false) }}</h6>
+								<span class="text-muted text-decoration-line-through">{{product.price}}
+									€
+								</span>
+								{{product.PriceSolde}}
+								€
+							</div>
+						</div>
+						<div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+							<div class="text-center">
+								<a href="{{ path('product_show', {'slug': product.slug}) }}" class="card-link btn btn-outline-primary">Détails</a>
+								<a href="#" class="card-link btn btn-{{ product.quantity != 0 ? 'success' : 'danger disabled' }}">
+									<i class="bi bi-cart-plus-fill"></i>
+								</a>
+
+							</div>
+						</div>
+					</div>
+				</div>
+			{% endfor %}
+		</div>
+	</div>
+
+
+{% endblock %}
