--- a/templates/registration/confirmation_email.html.twig
+++ b/templates/registration/confirmation_email.html.twig
@@ -1,11 +1,21 @@
 <h1>Hi! Please confirm your email!</h1>
+<h1>Bonjour ! Merci de confirmer votre adresse email !</h1>
+
 
 <p>
-    Please confirm your email address by clicking the following link: <br><br>
-    <a href="{{ signedUrl }}">Confirm my Email</a>.
-    This link will expire in {{ expiresAtMessageKey|trans(expiresAtMessageData, 'VerifyEmailBundle') }}.
+	Please confirm your email address by clicking the following link:
+			Merci de confirmer votre adresse email cliquant sur ce lien:
+
+	<br><br>
+	<a href="{{ signedUrl }}">Confirm my Email</a>.
+	<a href="{{ signedUrl }}">Confirmer mon email</a>.
+				
+							This link will expire in
+		                    ce lien experera dans
+
+	{{ expiresAtMessageKey|trans(expiresAtMessageData, 'VerifyEmailBundle') }}.
 </p>
 
 <p>
-    Cheers!
+	Cheers!
 </p>
