--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,21 +1,78 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Register{% endblock %}
+{% block title %}S'inscrire
+{% endblock %}
+
 
 {% block body %}
-    {% for flash_error in app.flashes('verify_email_error') %}
-        <div class="alert alert-danger" role="alert">{{ flash_error }}</div>
-    {% endfor %}
+	{% for flash_error in app.flashes('verify_email_error') %}
+		<div class="alert alert-danger" role="alert">{{ flash_error }}</div>
+	{% endfor %}
 
-    <h1>Register</h1>
+	<h1 class="mt-3 mb-3 offset-1">Inscrivez-vous</h1>
+	{{ form_start(registrationForm) }}
 
-    {{ form_start(registrationForm) }}
-        {{ form_row(registrationForm.email) }}
-        {{ form_row(registrationForm.plainPassword, {
-            label: 'Password'
+	<div class="row">
+		<div class="col-4 offset-2">
+			{{ form_row(registrationForm.first_name) }}
+
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-4 offset-2">
+			{{ form_row(registrationForm.last_name) }}
+
+
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-4 offset-2">
+			{{ form_row(registrationForm.phone) }}
+
+
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-4 offset-2">
+			{{ form_row(registrationForm.email) }}
+
+
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-4 offset-2">
+			{{ form_row(registrationForm.plainPassword.first, {
+            label: 'Mot de passe'
         }) }}
-        {{ form_row(registrationForm.agreeTerms) }}
 
-        <button type="submit" class="btn">Register</button>
-    {{ form_end(registrationForm) }}
-{% endblock %}
+
+		</div>
+		<div class="row">
+			<div class="col-4 offset-2">
+				{{ form_row(registrationForm.plainPassword.second, {
+            label: 'Répétez mot de passe'
+        }) }}
+
+
+			</div>
+
+		</div>
+
+		<div class="row">
+			<div class="col-4 offset-2">
+				{{ form_row(registrationForm.agreeTerms, {
+			label: 'J\'accepte les Conditions Générales d\'Utilisation'
+
+				}) }}
+
+				<button type="submit" class="btn btn-success">S'inscrire</button>
+
+
+			</div>
+		</div>
+
+
+		{{ form_end(registrationForm) }}
+
+
+	{% endblock %}
