--- a/templates/product/form.html.twig
+++ b/templates/product/form.html.twig
@@ -103,22 +103,22 @@
                 }) }}
 		</div>
 		<div class="col">
-			{{ form_row(productForm.images.image1, {
-					'label': 'image 1',
-				}) }}
+			{{ form_row(productForm.image1, {
+							'label': 'image 1 (obligatoire)',
+						}) }}
 		</div>
 
 		<div class="col">
-			{{ form_row(productForm.images.image2, {
-					'label': 'image 2',
-				}) }}
+			{{ form_row(productForm.image2, {
+							'label': 'image 2 (optionnel)',
+						}) }}
 		</div>
 
 
 		<div class="col">
-			{{ form_row(productForm.images.image3, {
-					'label': 'image 3',
-				}) }}
+			{{ form_row(productForm.image3, {
+							'label': 'image 3 (optionnel)',
+						}) }}
 		</div>
 
 
