--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,10 +3,12 @@
 
 	<head>
 
-		<meta name="author" content="Willy TALOM">
-		<meta name="keywords" content="Ventes de vetements Hommes Femmes Enfants">
-		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 		<meta charset="UTF-8">
+		<meta name="author" content="Willy TALOM">
+		<meta http-equiv="X-UA-Compatible" content="ie=edge">
+		<meta http-equiv="X-UA-Compatible" content="IE=7">
+		<meta name="keywords" content="Ventes de vetements Hommes Femmes Enfants">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="{% block description %}{% endblock %}">
 
 		<title>VDM
