--- a/templates/product/productShow.html.twig
+++ b/templates/product/productShow.html.twig
@@ -12,8 +12,12 @@
 					<h1 class="display-5 fw-bolder">
 						{{product.name}}</h1>
 					<div class="fs-5 mb-5">
-						<span class="text-decoration-line-through">{{product.price}}</span>
-						<span>{{product.reduction}}</span>
+						{% if product.reduction is not null %}
+							<span class="text-decoration-line-through">{{product.price}}</span>
+							<span>{{product.priceSolde}}</span>
+						{% else %}
+							<span>{{product.price}}</span>
+						{% endif %}
 					</div>
 					<p class="lead">{{product.abstract}}</p>
 					<div class="d-flex">
